# WereWolf

./: README.md  main.py  pyproject.toml
config/: roles.yml  skills.yml  test.yml  守墓人石像鬼.yml  机械狼通灵师.yml  标准10人局.yml  标准12人局.yml  标准6人局.yml  标准8人局.yml  标准9人局.yml  预女猎守.yml
scripts/: generate_audio.py
server/: app.py  config.py  connection_manager.py  events.py  game.py  messages.py  player.py  roles.py  skills.py
templates/: index.html
